--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ button:hover {
 }
 body {
     background-image: url('https://dkom3.github.io/repo/main/plus.unsplash.com/premium_photo-1664300792059-863ccfe55932?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Zm9yZXN0fGVufDB8fDB8fHww');
+    background-size: 100% 100%;  /* Stretch to fit */
     background-size: cover; /* This makes the image cover the entire background */
     background-position: center; /* This centers the image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
