--- a/style.css
+++ b/style.css
@@ -43,10 +43,10 @@ button:hover {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
 body {
-    background-image: url('https://dkom3.github.io/repo/main/plus.unsplash.com/premium_photo-1664300792059-863ccfe55932?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Zm9yZXN0fGVufDB8fDB8fHww');
-    background-size: cover; /* This makes the image cover the entire background */
-    background-position: center; /* This centers the image */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
-    height: 100vh;
-    margin: 0;
+    background-image: url('https://dkom3.github.io/repo/main/www.shutterstock.com/image-photo/scenic-image-iceland-incredible-nature-600nw-1453557041.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh; /* Full height */
+    margin: 0; /* Remove default margin */
 }
