--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ button:hover {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
 body {
-    background-image: url('https://dkom3.github.io/repo/premium_photo-1664300792059-863ccfe55932.jpeg'); /* Removed the trailing dot */
+    background-image: url('https://dkom3.github.io/repo/main/plus.unsplash.com/premium_photo-1664300792059-863ccfe55932?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Zm9yZXN0fGVufDB8fDB8fHww'); /* Removed the trailing dot */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
