--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url('https://dkom3.github.io/repo/main/plus.unsplash.com/premium_photo-1664300792059-863ccfe55932?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Zm9yZXN0fGVufDB8fDB8fHww.jpeg
-');
+    background-image: url(background-image: url('https://via.placeholder.com/1920x1080');
+    
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
