--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url('https://via.placeholder.com/1920x1080'); /* Correctly formatted URL */
+    background-image: url('https://dkom3.github.io/repo/main/premium_photo-1664300792059-863ccfe55932.jpeg'); /* Correctly formatted URL */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
