--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background-image: url('https://dkom3.github.io/repo/main/premium_photo-1664300792059-863ccfe55932.jpeg'); /* Correctly formatted URL */
+    min-height: 100vh;
+    background-image: url('https://dkom3.github.io/repo/main/premium_photo-1664300792059-863ccfe55932.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    margin: 0; /* Remove default margin */
+    margin: 0;
     font-family: Arial, sans-serif;
+    overflow: auto;
 }
 
 /* Button styles */
