--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-image: url('https://dkom3.github.io/main/premium_photo-1664300792059-863ccfe55932.jpeg');
+    background-image: url('https://dkom3.github.io/main/https://plus.unsplash.com/premium_photo-1664300792059-863ccfe55932?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Zm9yZXN0fGVufDB8fDB8fHww');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
