--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ button {
 
 /* Button hover effect */
 button:hover {
-    background-color: #000080; /* Darker red on hover */
+    background-color: #0303fc; /* Darker red on hover */
 }
 
 /* Quote display styles */
