--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 /* Button styles */
 button {
-    background-color: #7CFC00; /* Red color */
+    background-color: #aaff00; /* Red color */
     color: white;
     border: none;
     padding: 12px 24px;
