--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 /* Button styles */
 button {
     background-color: #33ff00; /* Red color */
-    color: white;
+    color: black;
     border: none;
     padding: 12px 24px;
     font-size: 18px;
