--- a/style.css
+++ b/style.css
@@ -47,26 +47,28 @@ button:hover {
     margin: 0 auto; /* Center the quote display */
 }
 .popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    border: 1px solid #ccc;
-    padding: 20px;
-    z-index: 1000;
-    display: none; /* Initially hidden */
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
 }
 
 .popup img {
-    max-width: 100%;
-    height: auto;
+  display: block;
+  margin: 10% auto;
+  max-width: 80%;
+  max-height: 80%;
 }
 
 #closeButton {
-    cursor: pointer;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
+  color: #fff;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
 }
